Adding more translations

--- a/FrontEnd/termi-project/public/index.html
+++ b/FrontEnd/termi-project/public/index.html
@@ -5,11 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" href="%PUBLIC_URL%/axe_tool.ico" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:image" content="termi.png">
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Welcome to the termi application that was written specifically for students and people who work in the industry in general to teach and remind important concepts in the field, it will help you save unpleasantness times."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/TermiLogo.ico" />
     
     <link rel="stylesheet" href="path/to/fontawesome.min.css">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-
@@ -51,5 +53,6 @@ crossorigin="anonymous">
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    </div>
   </body>
 </html>
